# ai-smartec-tickets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202605110001_initial_schema.py  202605110002_users_branches_ticket_types.py  202605110003_user_roles.py  202605110004_company_repo_url.py  202605110005_ticket_workflow_statuses.py  202605110006_user_skill_level.py  202605110007_company_config_file_paths.py  202605110008_ticket_analysis_required_skill_level.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: analysis.py  auth.py  companies.py  health.py  tickets.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  company.py  ticket.py  ticket_analysis.py  user.py
app/schemas/: analysis.py  auth.py  company.py  ticket.py  user.py
app/services/: ai_provider_analysis.py  analysis.py  analyzer_factory.py  assignment.py  repository.py  ticket_analysis_workflow.py
app/workers/: celery_app.py
frontend/: streamlit_app.py
tests/: conftest.py  test_analysis.py  test_auth.py  test_companies.py  test_health.py  test_tickets.py  test_users.py
