[project]
name = "ai-smartec-tickets"
version = "0.1.0"
description = "Backend MVP para gestionar tickets tecnicos electricos y analizar impacto probable con IA."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "redis>=5.0.8",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.35",
    "streamlit>=1.39.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"frontend/streamlit_app.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
